arkts_static_test/17_Experimental_Features/ets_cases/17.15_Accessor_Declarations/compile-fail/EXP2_17_15_012_FAIL_GETTER_NO_RETURN_TYPE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id EXP2_17_15_012_FAIL_GETTER_NO_RETURN_TYPE
 * @expect compile-fail
 * @section 17.15
 * @design GETTER_NO_RETURN_TYPE
 * @note spec: missing CTE check
 */
class C012 {
    get val() { return 1 }
}

